source/stylesheets/master.css.scss
@import 'variables.css.scss';

body {
	font-size: 15px;
	line-height: 1.8;
	background-color: #F3F5F6;
	color: $black;
}

.container {
    padding: 0;
}

#summary_table {
	width: 70%;
}

.clear {
	clear: both;
}

a {
	color: $blue;
	&:hover {
		color: $blue;
		text-decoration: underline;
	}
}

h2 {
	font-family: serif;
	&.faq {
		margin-top: 50px;
		cursor: pointer;
	}
}

footer {
	.brand {
		display: block;
		color: $black;
		margin-bottom: 24px;
	}
	ul {
		margin-bottom: 24px;
	}
	line-height: 1.4;
}

.navbar-default {
	background: transparent;
	border: none;
	border-radius: 0;
	border-bottom: 1px solid $black;

	.navbar-nav > li > a {
		color: $black;
		border-bottom: 3px solid $lightgray;
		border-color: $black;
		margin-left: 10px;
		font-size: 16px;
		padding: 16px 0 18px 0;
		width: 115px;

		&:hover, &.current {
			border-color: $blue;
		}
	}

	.navbar-brand {
		color: $black;
		font-size: 16px;

		> img {
			width: 30px;
			height: 30px;
		}

		&:hover {
			color: $black;
		}
	}
}

.container .jumbotron {
	padding-left: 24px;
	padding-top: 38px;
	padding-bottom: 22px;
	margin-bottom: 42px;
	background: transparent;
	font-family: serif;
	border-bottom: 1px solid $black;
	color: $black;
	border-radius: 0;

	.mainheading {
		display: block;
		margin-top: -5px;
		line-height: 64px;
	}

	h1 {
		margin: 0;
		font-size: 60px;

		> small {
			font: 18px sans-serif;
			font-weight: 400;
			text-transform: uppercase;
		}

		.name {
			font-size: 34px;
		}
	}
}



.lead {
	font: 30px serif;
	margin-bottom: 22px;
	line-height: 40px;
}

header {
	img {
		margin-right: 5px;
	}
}

footer {
	border-top: 1px solid $black;
	padding-top: 20px;
	padding-bottom: 120px;

	img {
		width: 30px;
		height: 30px;
		margin-right: 5px;
	}

	ul {
		list-style: none;
		padding: 0;

		li {
			margin-bottom: 14px;
			margin-top:3px;
		}
	}
}

.story {
	display: block;
	border-top: 6px solid $blue;
	background: #ffffff;
	padding-bottom: 12px;
	border-bottom-style: inset;
	border-bottom: 4px solid #fff;

	&:hover {
		text-decoration: none;

		&.bignav {
			border-bottom: 4px solid $lightgray;
		}
	}



	img {
		width: 100%;
		height: 100%;
	}

	hr {
		border-color: #d1d1d1;
		margin: 10px 0;
	}

	h3 {
		margin: 0;
		font-family: serif;
		font-size: 22px/28px;
		color: $black;
		margin: 20px 16px 20px;

		small {
			font: 12px sans-serif;
			text-transform: uppercase;
			font-weight: 400;
			color: $gray;
		}
	}

	&.bignav {
		margin-top: 40px;
		margin-bottom: 20px;
	}

	p {
		margin: 20px 16px 14px;
	}

	.icon {
		display: block;
		width: 160px;
		margin: 0 auto;
	}

	table {
		margin: 0px 20px 0px 20px;
		width: 92%;

		tr {
			height: 45px;
			border-bottom: 1px #EDEDED solid;

			&.last {
				border-bottom: 2px #ABABAB solid;
			}
			td.indent {
				padding-left:20px;
			}

			& > td:last-child {
				text-align: right;
			}

			&:first-child, &:last-child, &:nth-last-child(2), &:nth-last-child(3){
				font-weight: bold;
			}
			&:last-child {
				border-bottom: 0px;
			}
		}
	}
}

.blackout {
	padding: 2px;
	color: $black;
	background: $black;

	&:hover {
		background: transparent;
	}
}

.blue {
	color: $blue;
}


blockquote {
	border: none;
	color: $blue;
	font: 120px serif;
	line-height: 50px;
	margin-top: 60px;
	width: 100%;
	margin-bottom: 60px;

	&.middle{
		width: 85%;
	}

	p {
		color: #000;
		font: 26px/36px serif;
		font-weight: normal;
		width: 80%;
		margin-left: 80px;
	}

	footer {
		padding: 0;
		padding-top: 10px;
		border: none;
		font-size: 12px;

		p {
			font: 18px sans-serif;
			margin-top: 25px;
			margin-left: 170px;
			color: $black;

			small {
				display: block;
				text-transform: none;
				font-style: italic;
				color: $black;
				margin-top: 7px;

				&:before {
					content: '';
				}
			}
		}

		&:before {
			padding: 0;
			margin: 0;
			content: "";
		}

		img {
			width: 72px;
			margin-left: 80px;
			height: 72px;
			border-radius: 50%;
			float: left;
			border: 4px solid $blue;
		}
	}

	&:before {
		display: inline-block;
		float: left;
		content: '“';
	}

	&:after {
		margin-top: -60px;
		float: right;
		content: '”';
	}

}


.scorecard {
	margin: 5px 0 10px 0;
	border-top: 7px solid $blue;
	background: #ffffff;
	padding: 20px 16px 0;

	h2 {
		margin: 0;
		margin-bottom: 10px;
		font: 12px sans-serif;
		text-transform: uppercase;
		color: #666;
	}

	dl {
		margin: 0;

		dt {
			font: 22px/28px serif;
		}

		dd {
			font-size: 100px;
			line-height: 160px;
			color: $blue;
			text-align: center;
			letter-spacing: -3.5px;

			small {
				font-size: 40px;
			}
		}
	}

}

.legends {
	overflow: hidden;

	div {
		padding: 20px;
		width: 150px;
		display: block;
		float: left;
		font-size: 12px;
		line-height: 16px;

		p {
			margin-left: 15px;
			margin-top: -3px;
		}

		.total_requests_circle, .complied_requests_circle {
			display: block;
			float: left;
			height: 10px;
			width: 10px;
			border-radius: 20px;
			padding: 0;
			margin: 0;
		}

		.total_requests_circle {
			background: #387DF6;
		}

		.complied_requests_circle {
			background: #33415A;
		}
	}

	.fineprint {
		width: 400px;

		h2 {
			display: block;
			float: left;
			margin: -3px 4px 0px;
			font-size: 24px;
		}

		p {
			margin-left: 20px;
		}
	}
}

.faq {
	.question {
		cursor: pointer;
		width: 610px;

		img {
			transition: all 0.25s ease;
			width: 20px;
			display: block;
			float: left;
			margin-top: 10px;
		}

		span {
			display: block;
			margin-left: 30px;
		}

		&.open > img {
			transform: rotate(-180deg);
			/* Safari */
			-webkit-transform: rotate(-180deg);

			/* Firefox */
			-moz-transform: rotate(-180deg);

			/* IE */
			-ms-transform: rotate(-180deg);

			/* Opera */
			-o-transform: rotate(-180deg);

			/* Internet Explorer */
			filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
		}
	}

	.answer {
		width: 610px;
		margin-left: 30px;
	}

	hr {
		border-bottom: 1px solid #d1d1d1;
	}
}

// Scorecard Positioning
.scorecard_bottom {
	margin-top: 70px;
}

@media (max-width: 768px){

	.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
		padding-left: 15px;
		padding-right: 15px;
	}

	.container .jumbotron {
    padding-left: 15px;
    padding-right: 15px;

    .mainheading {
    	line-height: 60px;
    	font-size: 54px;
    }

    h1 .name {
    	font-size: 30px;
		}
  }

  .lead {
    font: 25px/34px serif;
  }


	.navbar-brand {
		padding: 15px 10px;
	}
	.navbar-default .navbar-brand {
		font-size: 10px;

		> img {
			width: 20px;
			height: 20px
		}
	}

	.navbar-default .navbar-toggle {
		border-color: $black;
		border-radius: 1px;
		padding: 7px 9px;
		margin-top: 10px;

		.icon-bar {
			background-color: $gray;
		}
	}

	.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a {
		border-bottom: none;
		border-left-width: 3px;
		border-left-style: solid;
		padding-left: 10px;
		margin-bottom: 2px;
	}

	blockquote {
		margin: 0;
		padding: 0;
		font-size: 60px;

		p {
			width: auto;
			margin: 0;
			margin-left: 40px;
		}
	}

	.story table {
		width: 90%;
	}

	footer {
		font-size: 14px;

		img {
				width: 20px;
				height: 20px;
			}

		ul li {
			margin-left: 30px;
		}
	}

	.story, .scorecard {
		margin: 0;
		margin-top: 30px;
	}

	.scorecard_bottom {
		margin-top: 30px;
	}

}

